--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,17 @@ project.ext {
     butterKnifeVersion = "8.8.1"
     retrofit2Version = "2.3.0"
     okhttp3Version = "3.9.0"
-    appCompatVersion = "26.1.0"
+    appCompatVersion = "27.1.1"
+    twitterVersion = "3.3.0@aar"
 }
 
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "fr.esgi.moc.minitwitter"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,7 +29,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$project.appCompatVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -40,4 +41,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$project.retrofit2Version"
     compile "com.squareup.okhttp3:okhttp-urlconnection:$project.okhttp3Version"
     compile "com.android.support:recyclerview-v7:$project.appCompatVersion"
+    compile("com.twitter.sdk.android:twitter:$project.twitterVersion") {
+        transitive = true
+    }
 }
